<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.demohealthapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.demohealthapp.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_eval"
        android:name="com.example.demohealthapp.ui.evaluation.EvaluationFragment"
        android:label="@string/menu_eval"
        tools:layout="@layout/fragment_evaluation" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.example.demohealthapp.ui.devices.DevicesFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_devices" />
    <activity
        android:id="@+id/nav_questions"
        android:name="com.example.demohealthapp.QuestionsActivity"
        android:label="@string/menu_devices"
        tools:layout="@layout/activity_questions" />
</navigation>