<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".QuestionsActivity" >

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="360dp"
        android:layout_height="640dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 1" />

            <TextView
                android:id="@+id/cough_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/cough_severity"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/none_cough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <RadioButton
                    android:id="@+id/mild_cough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mild" />

                <RadioButton
                    android:id="@+id/moderate_cough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Moderate" />

                <RadioButton
                    android:id="@+id/severe_cough"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/severe" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 2" />

            <TextView
                android:id="@+id/fever_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/existing_fever"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_fever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_fever"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 3" />

            <TextView
                android:id="@+id/aches_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/muscle_ache_severity"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/no_aches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <RadioButton
                    android:id="@+id/mild_aches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mild" />

                <RadioButton
                    android:id="@+id/severe_aches"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/severe" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 4" />

            <TextView
                android:id="@+id/tiredness_question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/more_tiredness"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_tiredness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_tiredness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 5" />

            <TextView
                android:id="@+id/irritation_question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/body_irritation"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_irritated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_irritated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 6" />

            <TextView
                android:id="@+id/congestion_question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/any_congestion"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/no_congestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/slight_congestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Slight" />

                <RadioButton
                    android:id="@+id/significant_congestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Significant" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 7" />

            <TextView
                android:id="@+id/nausea_question7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/any_nausea"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/no_Nausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

                <RadioButton
                    android:id="@+id/sometimes_Nausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sometimes" />

                <RadioButton
                    android:id="@+id/always_Nausea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Constant" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 8" />

            <TextView
                android:id="@+id/hr_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/elevated_hr"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 9" />

            <TextView
                android:id="@+id/chills_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/existing_chills"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_chills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_chills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 10" />

            <TextView
                android:id="@+id/sorethroat_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sore_throat"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_sorethroat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_sorethroat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Question 11" />

            <TextView
                android:id="@+id/headache_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/existing_headache"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/yes_headache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_headache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/evalsubmitbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:text="Submit"
        android:backgroundTint="@color/design_default_color_secondary" />

</RelativeLayout>
